Fix clipping issue on odd aspect ratio

--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ body {
     background-repeat: no-repeat, no-repeat;
     background-size: auto, auto;
     height: 100vh;
+    min-height: 600px;
     display: grid;
     place-content: center;
     padding: 0 1rem;
